@@ -46,13 +46,16 @@ Association ILT calculation completed
 20 values in the FFT convolution routine were replaced by standard convolution
 
 20 values in the FFT convolution routine were replaced by standard convolution
+In acetyl: No value of me:deltaEDown was supplied and the default value NEEDS TO BE CHECKED**
+In acetyl: The default value of me:DistributionCalcMethod was used.
 Diagonalize the Reaction Operator -- Time elapsed: 0 seconds.
 In mesmer::ReactionManager::timeEvolution: No population was assigned. Initialize the first source term to 1.0.
 
 1 temperature/concentration-pressure points calculated.
-Finish Calculation -- Time elapsed: 13 seconds.
- -- Total time elapsed: 37 seconds.
+Finish Calculation -- Time elapsed: 71 seconds.
+ -- Total time elapsed: 226 seconds.
 
 System saved to out.xml
 m_ImFreq is provided but not used in TS2.
 m_ImFreq is provided but not used in TS3.
+m_DeltaEdown is provided but not used in acetyl.
