@@ -35,7 +35,7 @@ Cell number = 38200, Grain number = 191
 Diagonalize the Reaction Operator -- Time elapsed: 0 seconds.
 
 2 temperature/concentration-pressure points calculated.
-Finish Calculation -- Time elapsed: 34 seconds.
- -- Total time elapsed: 66 seconds.
+Finish Calculation -- Time elapsed: 106 seconds.
+ -- Total time elapsed: 197 seconds.
 
 System saved to out.xml
