@@ -234,6 +234,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\LandauZenerCrossingCoeff.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\main.cpp"
 				>
 			</File>
@@ -318,6 +322,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\WKBCrossingCoeff.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\XMLPersist.cpp"
 				>
 			</File>
@@ -385,6 +393,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\IsomerizationReaction.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\LandauZenerCrossingCoeff.h"
 				>
 			</File>
 			<File
@@ -493,6 +505,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\unitsConversion.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\WKBCrossingCoeff.h"
 				>
 			</File>
 			<File
