@@ -1,3 +1,7 @@
+_2009_09_18__13_21_13_ Chi-Hsiu Liang
+
+  * Coorect an indices error on AssociationReaction.cpp
+
 2009-September-14 Dave Glowacki 
 
   *updates to manual and add print option for TS N(E)
